--- a/style.css
+++ b/style.css
@@ -10,14 +10,14 @@ header{
     background-image:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.1)), url(taj.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: 100%;
+    /* background-position: 100%; */
     /* margin-top: 5%; */
 }
 nav{
     width: 100%;
     height: 15vh;
     /* background: black; */
-    background: rgba(0,0,0,0.1);
+    background: rgba(0,0,0,0.2);
     color: white;
     display: flex;
     justify-content: space-between;
@@ -52,9 +52,7 @@ main{
     text-align: center;
     color: white;
 }
-section{
 
-}
 section h3{
     font-size: 35px;
     font-weight: 200;
@@ -83,6 +81,7 @@ section a{
     font-weight: 500;
     text-decoration: none;
     letter-spacing: 1px;
+    transition: all 0.5s ease;
 }
 section .btn-1{
     /* background-color: #00b894; */
@@ -101,10 +100,23 @@ section .btn-2{
 }
 
 @keyframes chnagetext{
-    0%{content: "Darjeeling";}
-    20%{content: "Agra";}
-    35%{content: "Jaipur";}
-    60%{content: "Kerala";}
-    80%{content: "Kerala";}
-    100%{content: "Mumbai";}
+    0%{
+        content: "Darjeeling";
+    }
+    20%{
+        content: "Agra";
+    }
+    35%{
+        content: "Jaipur";
+    }
+    60%{
+        content: "Kerala";
+    }
+    80%{
+        content: "Kerala";
+    }
+    100%{
+        content: "Mumbai";
+    }
 }
+
